fix: Remove preview API dependency for IntelliJ compatibility